force-app/main/default/objects/Expenses__c/Expenses__c.object-meta.xml
<CustomObject>
    <label>Expenses</label>
    <nameField>
        <label>Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>