force-app/main/default/objects/Expenses__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US Dollars</fullName>
            </value>
            <value>
                <fullName>Euro&apos;s</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>