force-app/main/default/objects/Expenses__c/fields/Detailed_Category__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Category</label>
    <referenceTo>Detailed_Category__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>