force-app/main/default/objects/Expenses__c/fields/Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>Payee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>