force-app/main/default/objects/Expenses__c/fields/Payee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payee_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>